--- a/roster.css
+++ b/roster.css
@@ -30,7 +30,6 @@ h2 span {
   margin: 0 4px 0 -10px;
 }
 
-
 section {
   display: flex;
 }
@@ -77,4 +76,7 @@ dd {
 
 dl:nth-of-type(even) {
   background-color: WhiteSmoke;
+}
+promote {
+  background-color: yellow;
 }
