--- a/css/app.css
+++ b/css/app.css
@@ -4,7 +4,7 @@
 
 .student {
     border: 1px solid #ddd;
-    height: 4rem;
+    height: 6rem;
 }
 
 span.student-name {
@@ -14,4 +14,7 @@ span.student-name {
 
 .actions {
     float: right;
+}
+.button {
+    height: 1rem;
 }
