--- a/css/app.css
+++ b/css/app.css
@@ -1,6 +1,7 @@
 .template {
     visibility: hidden; /*class template in html, makes initial delete hidden*/
 }
+
 h2 {
   font: 800 64px/64px 'Copperplate', sans-serif;
   text-transform: uppercase;
@@ -17,7 +18,8 @@ h2 span {
 
 .student {
     border: 1px solid #ddd;
-    padding: 0.75rem 1.25rem;
+    padding: 0.75rem 1.25rem; 
+    border-color: black;  
 }
 .student + .student {
     border-top: none;
@@ -27,6 +29,10 @@ span.student-name {
     line-height: 2.5rem;
     padding: 1px;
     white-space: nowrap;
+    text-transform: none;
+    margin: 0 4px 0 -10px;
+    font: 25px 'Copperplate', sans-serif;
+    
 }
 
 .actions {
@@ -36,11 +42,12 @@ span.student-name {
 .button {
 
     height: 3rem;
+    border: none;
 }
 .button.up {
-    border: 0.5px solid red
+    border: 1px solid red
 }
 .button.down {
-    border: 0.5px solid blue
+    border: 1px solid blue
 
 }
