--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,11 @@
+body{
+  background: red;
+  background: -webkit-linear-gradient(left,red,orange,yellow,green,blue,indigo,violet);
+  background: -o-linear-gradient(left,red,orange,yellow,green,blue,indigo,violet);
+  background: -moz-linear-gradient(left,red,orange,yellow,green,blue,indigo,violet);
+  background: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet); 
+}
+
 .template {
     visibility: hidden; /*class template in html, makes initial delete hidden*/
 }
